--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,48 @@ body {
         font-size: 70px;
     }
 }
+
+@media only screen and (max-width:480px){
+    .card{
+        max-width:500px;
+    }
+    #search{
+        max-width: 120vw;
+        font-size: 20px;
+    }
+
+    #weather-search{
+        font-size: 15px;
+    }
+    #names, #date, #description, #wind, #humidity{
+        font-size:20px;
+    }
+    #highlow, #temp{
+        font-size: 25px;
+    }
+    
+}
+
+@media only screen and (max-width:380px){
+    #temp{
+        margin-top:50px;
+    }
+    #search{
+        max-width: 80vw;
+        font-size: 15px;
+        
+    }
+    .weather-2{
+        margin-left: 30px;
+    }
+    .title{
+        padding-top:80px;
+    }
+
+}
+
+@media only screen and (max-width:320px){
+    #temp{
+        margin-top: -150px;
+    }
+}
